# titans-trainer

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: autoregressive_training.py  datasets.py  mlm_training.py  quickstart.py  shakespeare.py  shakespeare_benchmark.py  shakespeare_warmup.py  time_series_anomaly.py
tests/: test_shakespeare.py  test_titans.py
titans_trainer/: __init__.py  block.py  config.py  memory.py  model.py  trainer.py
